updated a style to prevent overlap

--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -5,6 +5,6 @@
   .carousel {
     display: block;
     margin: 0 auto;
-    max-width: 1024px;
+    max-width: 800px;
   }
 }
